--- a/local.properties
+++ b/local.properties
@@ -1,2 +1,2 @@
 # Location of the android SDK
-sdk.dir=C:/Users/Sawan/Downloads/INSTALADORES/adt-bundle-windows-x86_64-20130717/adt-bundle-windows-x86_64-20130717/sdk
+sdk.dir=C:\\Users\\Sawan\\Downloads\\adt-bundle-windows-x86-20130717\\adt-bundle-windows-x86-20130717\\sdk
