--- a/html/.settings/com.google.gdt.eclipse.core.prefs
+++ b/html/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,4 @@
-#Thu Dec 25 14:33:22 GMT 2014
-warSrcDir=webapp/
-lastWarOutDir=C\:\\Users\\Sawan\\Downloads\\MA\\html\\war
 eclipse.preferences.version=1
+lastWarOutDir=C\:\\Users\\Sawan\\workspace\\MathAttack\\html\\war
+warSrcDir=webapp/
 warSrcDirIsOutput=false
